# sincFold

./: BENCHMARK_COMPARISON_SUMMARY.md  README.md  benchmark_vienna.py  pyproject.toml  random_sequences.csv
results/benchmark_themordynamics_integration/: BPRNA_RESULTS.md  ETERNABENCH_RESULTS.md  VIENNA_OPTIMIZATION_SUMMARY.md  benchmark_bprna.py  benchmark_bprna_results.csv  benchmark_eternabench.py  benchmark_eternabench_results.csv  benchmark_vienna_results.csv  optimize_vienna_advanced.py  optimize_vienna_params.py  vienna_advanced_optimization_results.csv  vienna_optimization_results_20251030_193900.csv
sample/: rna_sequences.csv  rna_sequences_short.csv
src/sincfold/: __init__.py  embeddings.py  model.py  parser.py  utils.py
