[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sincfold"
version = "0.16.2" 
authors = [
  {name="Leandro Bugnon", email="lbugnon@sinc.unl.edu.ar"}]
description = "An end-to-end method to predict RNA secondary structure based on deep learning"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "torch>=2.2,<3.0",  # Updated to 2.2+ to fix deprecation warnings in torch internals
  "pandas==2.0.2",
  "numpy==1.24.2",
  "scikit-learn==1.2.1",
  "tqdm==4.64.1",
  "grakel==0.1.10",
  "numba>=0.58.0",
  "packaging>=23",
  "ViennaRNA>=2.6.0"
]

[project.urls]
"Homepage" = "https://github.com/sinc-lab/sincfold"
"Bug Tracker" = "https://github.com/sinc-lab/sincfold/issues"

[project.scripts]
sincFold = "sincfold:main"